Fix: `TransferFundsDialog` transfer icon alignment

--- a/src/modules/dashboard/components/TransferFundsDialog/TransferFundsDialogForm.css
+++ b/src/modules/dashboard/components/TransferFundsDialog/TransferFundsDialogForm.css
@@ -33,7 +33,7 @@
   height: 26px;
   width: 26px;
   position: relative;
-  top: -7px;
+  top: 0;
   justify-self: center;
 }
 
